--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@ i<!DOCTYPE html>
           <p class="greeting">HELLO, I'M</p>
           <h1>ARKANA FADLA RIKZA</h1>
           <p class="profession">I'M A WEB DEVELOPER & UI/UX DESIGNER</p>
+           <a id="Download" href="./images/p.jpg" download="CV">download Cv</a>
 
           <section id="about">
             <h2 class="about-me-title">ABOUT ME</h2>
-            <div class="download">
-              <a href="./images/p.jpg" download="CV">download Cv</a>
-            </div> 
-          </section>
 
           <div class="about-box">   
             <p>
@@ -55,6 +52,8 @@ i<!DOCTYPE html>
               websites. With experience in HTML, CSS, JavaScript, and modern
               frameworks. I'm ready to help bring your digital ideas to life.
             </p>
+
+          </section>
             
             </div>
             <div class="illustration-placeholder">
@@ -66,14 +65,14 @@ i<!DOCTYPE html>
       <section class="my-skill" id="myskill">
         <h2 class="skill-title">MY SKILL</h2>
         <div class="skill-grid">
-          <div class="skill-item"><img src="js.png" alt="JavaScript" /></div>
-          <div class="skill-item"><img src="html-5.png" alt="HTML5" /></div>
-          <div class="skill-item"><img src="css-3.png" alt="CSS3" /></div>
-          <div class="skill-item"><img src="figma.png" alt="Figma" /></div>
-          <div class="skill-item"><img src="illustrator.png" alt="Adobe Illustrator" /></div>
-          <div class="skill-item"><img src="canva.png" alt="Canva" /></div>
-          <div class="skill-item"><img src="python.png" alt="Python" /></div>
-          <div class="skill-item"><img src="php.png" alt="PHP" /></div>
+          <div class="skill-item"><img src="./images/js.png" alt="JavaScript" /></div>
+          <div class="skill-item"><img src="./images/html-5.png" alt="HTML5" /></div>
+          <div class="skill-item"><img src="./images/css-3.png" alt="CSS3" /></div>
+          <div class="skill-item"><img src="./images/figma.png" alt="Figma" /></div>
+          <div class="skill-item"><img src="./images/illustrator.png" alt="Adobe Illustrator" /></div>
+          <div class="skill-item"><img src="./images/canva.png" alt="Canva" /></div>
+          <div class="skill-item"><img src="./images/python.png" alt="Python" /></div>
+          <div class="skill-item"><img src="./images/php.png" alt="PHP" /></div>
         </div>
       </section>
 
@@ -82,19 +81,19 @@ i<!DOCTYPE html>
             <div class="project-container">
                 
                 <div class="project-card">
-                  <img src="download.jpeg" alt="project 1">
+                  <img src="./images/download.jpeg" alt="project 1">
                     <h3>project 1</h3>
                     <p class="project-description">Lorem ipsum dolor sit amet, cosectetur adipiscing elit, sed</p>
                 </div>
 
                 <div class="project-card">
-                  <img src="download (14).jpeg" alt="project 2">
+                  <img src="./images/download (14).jpeg" alt="project 2">
                     <h3>project 2</h3>
                     <p class="project-description">Lorem ipsum dolor sit amet, cosectetur adipiscing elit, sed</p>
                 </div>
 
                 <div class="project-card">
-                  <img src="download (15).jpeg" alt="project 3">
+                  <img src="./images/download (15).jpeg" alt="project 3">
                     <h3>project 3</h3>
                     <p class="project-description">Lorem ipsum dolor sit amet, cosectetur adipiscing elit, sed</p>
                 </div>
@@ -126,4 +125,3 @@ i<!DOCTYPE html>
     </script>
   </body>
 </html>
-
